chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: beanie-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "beanie.fireshellstudio.com"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: beanie-kiosk-service
          servicePort: 80
